--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -11,6 +11,7 @@
             <connections>
                 <outlet property="attachImageButton" destination="4qi-ee-cg3" id="Xg0-1t-cqw"/>
                 <outlet property="bubbleEntryTextField" destination="vK1-pD-Rkg" id="doH-Yr-5Fj"/>
+                <outlet property="cancelButton" destination="ZSP-DV-OVE" id="PDg-9u-xh5"/>
                 <outlet property="postButton" destination="NaM-C8-cjP" id="QlH-rR-pZf"/>
                 <outlet property="view" destination="iN0-l3-epB" id="SVu-iB-tsJ"/>
             </connections>
@@ -21,39 +22,51 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
-                    <rect key="frame" x="234" y="792" width="140" height="30"/>
+                    <rect key="frame" x="311" y="772" width="46" height="41"/>
+                    <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <state key="normal" title="Post">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" placeholder="What would you like to say?" textAlignment="justified" adjustsFontSizeToFit="NO" minimumFontSize="20" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
+                    <rect key="frame" x="0.0" y="96" width="414" height="300"/>
+                    <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="QQ2-IP-cc9"/>
+                        <constraint firstAttribute="height" constant="300" id="cl7-ha-gPK"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                    <state key="normal" title="Post Thought"/>
-                </button>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" borderStyle="roundedRect" placeholder="What would you like to say?" textAlignment="justified" adjustsFontSizeToFit="NO" minimumFontSize="20" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
-                    <rect key="frame" x="20" y="271" width="374" height="212"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="212" id="Usz-JX-xqA"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qi-ee-cg3">
-                    <rect key="frame" x="156" y="508" width="102" height="30"/>
+                    <rect key="frame" x="156" y="404" width="102" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="3Ue-qY-8CR"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="Attach Image"/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSP-DV-OVE">
+                    <rect key="frame" x="338" y="54" width="56" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="IZ0-l4-aI5"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="Cancel"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="40" id="ISh-N1-gfY"/>
-                <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="RHN-hc-phx"/>
-                <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="25" id="e2i-pB-HLg"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="40" id="fR2-4h-Vx2"/>
-                <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="309" id="fuA-zw-Nt5"/>
-                <constraint firstItem="4qi-ee-cg3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="gTB-pa-oxU"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vK1-pD-Rkg" secondAttribute="trailing" constant="20" id="qPR-4f-AON"/>
+                <constraint firstItem="vK1-pD-Rkg" firstAttribute="top" secondItem="ZSP-DV-OVE" secondAttribute="bottom" constant="8" id="129-Tr-y3Q"/>
+                <constraint firstItem="ZSP-DV-OVE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="31Q-wx-nsl"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="8" id="3zV-K3-Psa"/>
+                <constraint firstItem="vK1-pD-Rkg" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="DH2-yz-e6K"/>
+                <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Fmk-8d-YCC"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ZSP-DV-OVE" secondAttribute="trailing" constant="20" id="HPn-go-Rlz"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="57" id="WCe-ud-ISj"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aFV-Lv-2Sg"/>
+                <constraint firstItem="vK1-pD-Rkg" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="52" id="e8R-WV-feB"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="49" id="k85-6J-bfj"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="87.723214285714278"/>
